Fix Layout And contrast

--- a/template/src/css/main.css
+++ b/template/src/css/main.css
@@ -126,7 +126,7 @@ a:focus {
 #content {
   margin-top: 10px;
   padding-left: 10px;
-  margin-left: 250px;
+  margin-left: 320px;
 }
 
 p {
@@ -174,7 +174,12 @@ td.code {
 }
 
 .label.optional {
-  background-color: grey;
+  background-color: #6c757d;
+  color: #ffffff;
+  padding: 2px 6px;
+  font-size: 11px;
+  font-weight: 500;
+  border-radius: 3px;
 }
 
 .label.required {
@@ -284,7 +289,7 @@ pre code {
   top: 0;
   left: 0;
   bottom: 0;
-  width: 250px;
+  width: 320px;
   z-index: 10;
   background-color: var(--dark-gray);
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
@@ -500,17 +505,28 @@ tr.del td {
  * ------------------------------------------------------------------------------------------ */
 
 #loader {
-  position: absolute;
-  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.95);
+  z-index: 9999;
 }
 
 #loader p {
-  padding-top: 80px;
-  margin-left: -4px;
+  margin-top: 20px;
+  text-align: center;
+  color: var(--primary);
+  font-weight: 500;
+  font-size: 16px;
 }
 
 .spinner {
-  margin: 200px auto;
   width: 60px;
   height: 60px;
   position: relative;
